target/classes/META-INF/jkube/openshift/camel-ose-springboot-xml-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: camel-ose-springboot-xml
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: camel-ose-springboot-xml
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: camel-ose-springboot-xml
    provider: jkube
    group: org.mycompany
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        rht.comp: spring-boot-camel-xml
        com.company: Red_Hat
        rht.prod_ver: "7.9"
        rht.comp_ver: ""
        rht.prod_name: Red_Hat_Integration
        app: camel-ose-springboot-xml
        provider: jkube
        version: 1.0.0-SNAPSHOT
        group: org.mycompany
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: "{\"server\":{\"undertow\":{\"io-threads\":1, \"worker-threads\"\
            :2 }}}"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: camel-ose-springboot-xml:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: "0.2"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: camel-ose-springboot-xml:latest
    type: ImageChange
