target/classes/META-INF/jkube/openshift/camel-ose-springboot-xml-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: camel-ose-springboot-xml
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: camel-ose-springboot-xml
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: camel-ose-springboot-xml
    provider: jkube
    group: org.mycompany
