target/classes/META-INF/jkube/openshift/camel-ose-springboot-xml-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: camel-ose-springboot-xml
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: org.mycompany
  name: camel-ose-springboot-xml
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: camel-ose-springboot-xml
